--- a/confidential-tokens/contracts/build.gradle
+++ b/confidential-tokens/contracts/build.gradle
@@ -3,7 +3,7 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 apply plugin: 'kotlin'
 apply plugin: 'net.corda.plugins.cordapp'
 
-jar.baseName = "cordapp-example-contracts"
+jar.baseName = "confidential-tokens-contracts"
 
 cordapp {
     targetPlatformVersion corda_platform_version.toInteger()
@@ -14,16 +14,27 @@ cordapp {
         licence "Apache License, Version 2.0"
         versionId 1
     }
+    signing {
+        enabled false
+    }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    cordapp project(":crypto")
+    compile project(":crypto")
 
+    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    testCompile "junit:junit:$junit_version"
+    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
 
     // Corda dependencies.
     cordaCompile "$corda_release_group:corda-core:$corda_release_version"
-    cordaCompile "$tokens_release_group:tokens-contracts:$tokens_release_version"
+    compile "$tokens_release_group:tokens-contracts:$tokens_release_version"
+
+    // Bulletproofs prototype implementation
+    // https://crypto.stanford.edu/bulletproofs/
+//    compile files('../lib/efficientct-1.0-SNAPSHOT.jar')
+
 }
 
 tasks.withType(KotlinCompile) {
