--- a/confidential-tokens/crypto/build.gradle
+++ b/confidential-tokens/crypto/build.gradle
@@ -3,23 +3,19 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 apply plugin: 'kotlin'
 apply plugin: 'net.corda.plugins.cordapp'
 
-jar.baseName = "cordapp-example-crypto"
-
-cordapp {
-    targetPlatformVersion corda_platform_version.toInteger()
-    minimumPlatformVersion corda_platform_version.toInteger()
-    contract {
-        name "CorDapp Example"
-        vendor "Corda Open Source"
-        licence "Apache License, Version 2.0"
-        versionId 1
-    }
-}
+jar.baseName = "confidential-tokens-crypto"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile "junit:junit:$junit_version"
+
+    // Java ed25519 implementation. See https://github.com/str4d/ed25519-java/
+    testCompile "net.i2p.crypto:eddsa:$eddsa_version"
+
+    // Bouncy castle support needed for X509 certificate manipulation
+    testCompile "org.bouncycastle:bcprov-jdk15on:${bouncycastle_version}"
+    testCompile "org.bouncycastle:bcpkix-jdk15on:${bouncycastle_version}"
 
 
     cordaCompile "$corda_release_group:corda-core:$corda_release_version"
